# v-terminal

./: .gitattributes  .gitignore  BUILD.md  CLAUDE.md  Directory.Build.props  README.md  SPEC.md  index.html  package.json  pnpm-lock.yaml  v-terminal.sln  vcpkg.json  vite.config.ts
public/: splash.html
scripts/: build-daemon-dev.mjs  build-daemon-release.mjs  copy-daemon.mjs  daemon-start.mjs  daemon-stop.mjs
src/: App.css  App.tsx  i18n.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: .gitignore
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: preinstall.nsh
src-tauri/src/: lib.rs  main.rs
src-tauri/src/claude/: claude_md.rs  cwd_resolver.rs  dashboard.rs  file_watcher.rs  mod.rs  usage.rs
src-tauri/src/commands/: browser_commands.rs  claude_commands.rs  daemon_commands.rs  git_commands.rs  mod.rs  pty_commands.rs  session_commands.rs  wsl_commands.rs
src-tauri/src/daemon/: client.rs
src-tauri/src/git/: local.rs  mod.rs  parser.rs  ssh.rs  watcher.rs  wsl.rs
src-tauri/src/pty/: manager.rs  session.rs
src-tauri/src/session/: local_session.rs  manager.rs  mod.rs  ssh_pool.rs  ssh_session.rs  wsl_ssh_setup.rs
src-tauri/src/state/: app_state.rs  mod.rs  persistence.rs
v-terminal.App/: App.idl  App.xaml  App.xaml.cpp  App.xaml.h  Package.appxmanifest  ThemeManager.cpp  ThemeManager.h  WorkspaceManager.cpp  WorkspaceManager.h  app.manifest  main.cpp  pch.h  v-terminal.App.vcxproj
v-terminal.Core/: EventBus.cpp  EventBus.h  FuzzyMatch.cpp  FuzzyMatch.h  JsonStore.cpp  JsonStore.h  (+5 more)
(+279 files in other folders)
