[package]
name = "v-terminal"
version = "0.1.8"
description = "v-terminal — A fast Tauri terminal with xterm.js"
authors = []
edition = "2021"
default-run = "v-terminal"

[lib]
name = "v_terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "v-terminal-daemon"
path = "src/bin/daemon.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "unstable"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-window-state = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
url = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
